RESOLVED FIXED186860
[WebKit on watchOS] Fixed position elements sometimes flicker when scrolling
https://bugs.webkit.org/show_bug.cgi?id=186860
Summary [WebKit on watchOS] Fixed position elements sometimes flicker when scrolling
Wenson Hsieh
Reported 2018-06-20 14:08:55 PDT
Attachments
Patch (15.00 KB, patch)
2018-06-20 14:42 PDT, Wenson Hsieh
thorton: review+
Patch for landing (15.03 KB, patch)
2018-06-20 16:18 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2018-06-20 14:42:30 PDT
Tim Horton
Comment 2 2018-06-20 16:03:03 PDT
Comment on attachment 343182 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=343182&action=review > Tools/TestWebKitAPI/Tests/ios/WKScrollViewTests.mm:57 > + sleep(1); :( quite a slow API test. but I can't imagine a better way without e.g. overriding internal methods on WKWebView.
Wenson Hsieh
Comment 3 2018-06-20 16:04:24 PDT
(In reply to Tim Horton from comment #2) > Comment on attachment 343182 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=343182&action=review > > > Tools/TestWebKitAPI/Tests/ios/WKScrollViewTests.mm:57 > > + sleep(1); > > :( quite a slow API test. but I can't imagine a better way without e.g. > overriding internal methods on WKWebView. True, 1 sec. is somewhat excessive. I'll tone it down.
Wenson Hsieh
Comment 4 2018-06-20 16:18:47 PDT
Created attachment 343187 [details] Patch for landing
WebKit Commit Bot
Comment 5 2018-06-20 16:57:28 PDT
Comment on attachment 343187 [details] Patch for landing Clearing flags on attachment: 343187 Committed r233025: <https://trac.webkit.org/changeset/233025>
Note You need to log in before you can comment on or make changes to this bug.