[WebKit on watchOS] Fixed position elements sometimes flicker when scrolling https://bugs.webkit.org/show_bug.cgi?id=186860 <rdar://problem/39953563>

Reviewed by Tim Horton.

Source/WebKit:

Remove conditional guards that are no longer necessary, now that the oldest iOS version our builders support is
iOS 11. Conditionalizing this logic only for iOS 11+ meant that on watchOS, we're always falling down the path
where we don't schedule a visible content rect update until the next runloop, which makes it possible for a
remote layer tree transaction to arrive and cause us to update the scrolling tree with stale viewport geometry.

Test: WKScrollViewTests.PositionFixedLayerAfterScrolling

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _scheduleVisibleContentRectUpdateAfterScrollInView:]):

Tools:

Add a new API test to exercise a race condition between receiving remote layer tree commits and updating visible
content rects which would result in the compositing layer for a fixed position element sometimes appearing in
the wrong place. See WebKit ChangeLog for more details.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/fixed-nav-bar.html: Added.
* TestWebKitAPI/Tests/ios/WKScrollViewTests.mm: Added.
(traverseLayerTree):
(TEST):


Canonical link: https://commits.webkit.org/202125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233025 268f45cc-cd09-0410-ab3c-d52691b4dbfc